--- a/main.html
+++ b/main.html
@@ -1,53 +1,68 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>com.nraboy.webhooks</title>
-        <meta charset="utf-8" />
-    </head>
-    <body>
-        <script src="common.js"></script>
-        <script>
-                $SD.on('connected', (jsonObj) => connected(jsonObj));
+<head>
+    <title>com.danielkay.webhooks</title>
+    <meta charset="utf-8"/>
+</head>
+<body>
+<script src="common.js"></script>
+<script>
+    $SD.on('connected', (jsonObj) => connected(jsonObj));
 
-                function connected(jsonObj) {
-                    console.log(`[connected] ${JSON.stringify(jsonObj)}`);
-                    $SD.on('com.nraboy.webhooks.action.willAppear', (jsonObj) => action.onWillAppear(jsonObj));
-                    $SD.on('com.nraboy.webhooks.action.keyUp', (jsonObj) => action.onKeyUp(jsonObj));
-                    $SD.on('com.nraboy.webhooks.action.didReceiveSettings', (jsonObj) => action.onDidReceiveSettings(jsonObj));
-                    $SD.on('com.nraboy.webhooks.action.propertyInspectorDidAppear', (jsonObj) => {});
-                    $SD.on('com.nraboy.webhooks.action.propertyInspectorDidDisappear', (jsonObj) => {});
-                    $SD.on('com.nraboy.webhooks.action.sendToPlugin', (jsonObj) => action.onSendToPlugin(jsonObj));
-                };
+    function connected(jsonObj) {
+        console.log(`[connected] ${JSON.stringify(jsonObj)}`);
+        $SD.on('com.danielkay.webhooks.action.willAppear', (jsonObj) => action.onWillAppear(jsonObj));
+        $SD.on('com.danielkay.webhooks.action.keyUp', (jsonObj) => action.onKeyUp(jsonObj));
+        $SD.on('com.danielkay.webhooks.action.didReceiveSettings', (jsonObj) => action.onDidReceiveSettings(jsonObj));
+        $SD.on('com.danielkay.webhooks.action.propertyInspectorDidAppear', (jsonObj) => {
+        });
+        $SD.on('com.danielkay.webhooks.action.propertyInspectorDidDisappear', (jsonObj) => {
+        });
+        $SD.on('com.danielkay.webhooks.action.sendToPlugin', (jsonObj) => action.onSendToPlugin(jsonObj));
 
-                const action = {
-                    onDidReceiveSettings: (jsonObj) => {
-                        console.log(`[onDidReceiveMessage] ${JSON.stringify(jsonObj)}`);
-                    },
-                    onWillAppear: (jsonObj) => {
-                        console.log(`[onWillAppear] ${JSON.stringify(jsonObj)}`);
-                        $SD.api.sendToPropertyInspector(jsonObj.context, Utils.getProp(jsonObj, "payload.settings", {}), jsonObj.action);
-                    },
-                    onSendToPlugin: (jsonObj) => {
-                        console.log(`[onSendToPlugin] ${JSON.stringify(jsonObj)}`);
-                        if(jsonObj.payload) {
-                            $SD.api.setSettings(jsonObj.context, jsonObj.payload);
-                        }
-                    },
-                    onKeyUp: (jsonObj) => {
-                        console.log(`[onKeyUp] ${JSON.stringify(jsonObj)}`);
-                        if (!jsonObj.payload.settings || !jsonObj.payload.settings.webhookurl) {
-                            $SD.api.showAlert(jsonObj.context);
-                            return;
-                        }
-                        fetch(jsonObj.payload.settings.webhookurl, {
-                            "method": jsonObj.payload.settings.webhookmethod,
-                            "headers": {
-                                "content-type": "application/json"
-                            },
-                            "body": jsonObj.payload.settings.webhookpayload
-                        }).then(result => $SD.api.showOk(jsonObj.context), error => $SD.api.showAlert(jsonObj.context));
-                    }
-                };
-        </script>
-    </body>
+        const action = {
+            onDidReceiveSettings: (jsonObj) => {
+                console.log(`[onDidReceiveMessage] ${JSON.stringify(jsonObj)}`);
+            },
+            onWillAppear: (jsonObj) => {
+                console.log(`[onWillAppear] ${JSON.stringify(jsonObj)}`);
+                $SD.api.sendToPropertyInspector(jsonObj.context, Utils.getProp(jsonObj, "payload.settings", {}), jsonObj.action);
+            },
+            onSendToPlugin: (jsonObj) => {
+                console.log(`[onSendToPlugin] ${JSON.stringify(jsonObj)}`);
+                if (jsonObj.payload) {
+                    $SD.api.setSettings(jsonObj.context, jsonObj.payload);
+                }
+            },
+            onKeyUp: (jsonObj) => {
+                let webSocket = new WebSocket("ws://localhost:4001");
+
+                if (!jsonObj.payload.settings || !jsonObj.payload.settings.webhookurl) {
+                    $SD.api.showAlert(jsonObj.context);
+                    return;
+                }
+
+                function waitForSocketConnection(socket, callback) {
+                    setTimeout(
+                        function () {
+                            if (socket.readyState === 1) {
+                                if (callback != null) {
+                                    callback();
+                                }
+                            } else {
+                                waitForSocketConnection(socket, callback);
+                            }
+                        }, 5);
+                }
+
+                waitForSocketConnection(webSocket, () => {
+                    webSocket.send(jsonObj.payload.settings.webhookpayload)
+
+                    webSocket.close()
+                })
+            }
+        };
+    }
+</script>
+</body>
 </html>
